--- a/wa.user.styl
+++ b/wa.user.styl
@@ -14,6 +14,9 @@
 @var text     radius     'Custom rounded corners' 4px
 @var checkbox msg_tails  'Enable message tails  ' 1
 @var checkbox fullscreen 'Enable fullscreen mode' 0
+
+@var range    emoji_o    'Emoji: Default opacity' [0.8, 0.0, 1, 0.01]
+
 @var select   app_image  'Custom app background ' {
     'Custom  *': 'custom  ',
     'Default  ': 'default ',
@@ -81,6 +84,9 @@
         --bshadow   : 0 2px 4px var(--shadow);
 
         --userstyle: 'Dark-WhatsApp [Alpha]';
+
+        --emoji-o   : emoji_o;
+
         --bg-image  : image_url;
         --bg-opacity: bg_opacity;
         --bg-blur   : bg_blur;
@@ -310,7 +316,9 @@
     .emojik {
         clip-path: circle(49%);
         &:focus, &.selected { box-shadow: 0 0 0 2px ac !important }
-        &:not(:hover):not(:focus):not(.selected) { filter: opacity(0.6) }
+        &:not(:hover):not(:focus):not(.selected) {
+            filter: opacity(var(--emoji-o));
+        }
     }
 
     /// Global -> Emoji picker popout.
