global: fix colors for status icon placeholder

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -460,10 +460,7 @@
             > div[class]:nth-child(2) {
                 .ojaNO { c: cm }
                 /// Reset the circle icon.
-                svg[width][height] path {
-                    fill: none;
-                    stroke: fg;
-                }
+                svg[width][height] path { v: t fg }
             }
             /// Feat -> Fullscreen mode.
             if ( fullscreen == 1 ) {
