--- a/wa.user.styl
+++ b/wa.user.styl
@@ -619,7 +619,8 @@
             [style *= 'z-index'] > div > div[class] {
                 c: 0 0 t;
                 box-shadow: 0 1px bd;
-                /// Active.
+                .matched-text { c: ac }
+                /// Active states.
                 &:hover, &._3mMX1 {
                     c: 0 0 hl;
                     box-shadow: inset 0 1px bd, 0 1px bd;
@@ -803,7 +804,7 @@
                 /// Selected messages.
                 .qTFAl {
                     &:hover, &._3Z2tD {
-                        opacity: 0.9 !important;
+                        opacity: 0.5 !important;
                         c: 0 0 bd;
                     }
                 }
