--- a/wa.user.styl
+++ b/wa.user.styl
@@ -270,6 +270,9 @@
 
         /// Contacts -> Loader.
         svg[width = '18'][height = '18'] circle { stroke: green }
+
+        /// Panes -> Change avatars.
+        ._1JS2G { c: fg 0 #66666666 }
     }
 
     #app > div {
