chat: tweak colors for system messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -796,6 +796,7 @@
             c: white 0 blue;
             box-shadow: inset 0 -3px sh;
             &.S-bQb { c: 0 0 orange }
+            &:not(.tail) { c: 0 0 green }
         }
         /// Chat -> Jump to new messages.
         ._3KRbU {
