global: fix 'failed to connect' modal body section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -429,6 +429,12 @@
                     }
                 }
             }
+            /// Failed to connect.
+            span[role = 'button'] { c: ac }
+            hr {
+                c: 0 bd;
+                + div { c: fg }
+            }
         }
     }
 
