chat: fix reply feature background color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -901,6 +901,8 @@
             ._2Nkc4:not(#z), > span:last-child > div[style] {
                 background: linear-gradient(90deg, t, left) i;
             }
+            /// Replies.
+            ._2HTIU { c: 0 0 right }
         }
         /// Right.
         &-out {
@@ -922,6 +924,8 @@
             > span:last-child > div[style] {
                 background: linear-gradient(90deg, t, right) i;
             }
+            /// Replies.
+            ._2HTIU { c: 0 0 left }
         }
     }
 
