chat: fix styles for rich msg embeds

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -840,6 +840,13 @@
                 > ._1mrMQ { c: fg 0 sh }
                 + div { &, > span::before { c: cm }}
             }
+            /// Rich embeds.
+            ._1SsXF {
+                c: 0 0 sh;
+                div > div:nth-child(1) span { c: fg }
+                div > div:nth-child(2) span { c: cm }
+                div > div:nth-child(3) span { c: fg }
+            }
         }
     }
 
