right: fix missing styles in the msg info section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -771,13 +771,20 @@
             padding: 0 15px;
             width: auto;
         }
+        /// Message info.
+        ._2rGVQ {
+            border-bottom: 1px solid bd;
+            c: 0 0 t;
+        }
+        /// Read/Delivered section.
+        ._2WP9Q { border: none }
     }
 
     // Main -> Chat.
     #main {
         c: 0 0 bg;
         /// Chat doodle image.
-        [data-asset-chat-background] {
+        /[data-asset-chat-background] {
             opacity: 1;
             filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o));
             background: var(--chat-image);
