chat: fix msg highlight when selected from search

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -911,6 +911,8 @@
                 box-shadow: bsh;
                 svg path[fill = '#DFE5E7'] { v: t }
             }
+            /// Search -> Selected message.
+            > .velocity-animating * { c: ac }
         }
         /// Left.
         &-in {
