global: re-use searchbox styles in other sections

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -611,18 +611,15 @@
             }
         }
         /// Search.
-        > div[tabindex = '-1'] {
+        /div[class *= 'ZP8RM'] {
             border-bottom: 1px solid bd;
-            c: 0 0 t;
-            /// Active.
-            > div {
-                &._19OGD { c: 0 0 hl }
-                &::after { content: none }
-                > div { c: cm }
-                > div + label {
-                    c: 0 0 t;
-                    input { c: fg 0 t }
-                }
+            c: 0 0 bg;
+            &._19OGD { c: 0 0 hl }
+            &::after { content: none }
+            > div { c: cm }
+            > div + label {
+                c: 0 0 t;
+                input { c: fg 0 t }
             }
         }
         /// Contacts.
