chat: remove background from image context menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -893,6 +893,8 @@
             }
             /// Date.
             [data-pre-plain-text] + div * { c: cm }
+            /// Reset image context menu.
+            &._26GKj ._2Nkc4:not(#z) { background: none i  }
             /// Stickers.
             &.a81-s {
                 /// Header.
