--- a/wa.user.styl
+++ b/wa.user.styl
@@ -934,6 +934,8 @@
                     border-right-color: left;
                 }
             }
+            /// Groups -> Nickname.
+            [role] > span[role = 'button'] + span { c: fg }
             /// Context menu.
             ._2Nkc4:not(#z), > span:last-child > div[style] {
                 background: linear-gradient(90deg, t, left) i;
