--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -392,6 +392,7 @@
         border: 0px solid var(--dark);
         background-color: var(--dark) !important; }
       /* Input element. */
+      .ZP8RM ._183ES,
       .ZP8RM label input {
         color: var(--light);
         background-color: transparent; }
@@ -813,20 +814,22 @@
           outline: 3px solid var(--accent) !important; }
 
   /* Highlight message bubbles. #29 */
-  div.message-in.velocity-animating,
-  div.message-out.velocity-animating {
+  div.message-in.velocity-animating > div > div,
+  div.message-out.velocity-animating > div > div {
     background-color: var(--accent) !important }
-  .tail.velocity-animating > .tail-container {
+  .velocity-animating > .tail > .tail-container {
     border-top-color: var(--accent) !important }
 
   /* Message bubbles. */
-  .message-in:not(.a81-s), .message-out:not(.a81-s), .message {
+  .message-in:not(.a81-s) > div,
+  .message-out:not(.a81-s) > div {
     background-color: var(--darker) !important; }
     ._2v02G {
       color: var(--lighter) !important; }
 
     /* Bubble colors. #49 */
-    .message-in:not(.a81-s) > div, .message-out:not(.a81-s) > div {
+    .message-in:not(.a81-s) > div > div,
+    .message-out:not(.a81-s) > div > div {
       background-color: var(--darker) !important; }
 
     /* Message text color. */
@@ -999,11 +1002,11 @@
     z-index: 0 !important;
     border-top: 12px solid var(--darker);
     background: none !important; }
-    .tail.message-in .tail-container {
+    .message-in > .tail > .tail-container {
       left: -10px !important; top: 0px;
       border-left: 10px solid transparent;
       border-radius: 5px 0 0 0; }
-    .tail.message-out .tail-container {
+    .message-out > .tail > .tail-container {
       right: -10px !important; top: 0px;
       border-right: 10px solid transparent;
       border-radius: 0 5px 0 0; }
