global: fix selector for media viewer footer

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -806,7 +806,7 @@
           color: var(--light); }
 
     /* Footer. */
-    ._2AP3i {
+    ._2n0jo {
       border-color: var(--darker) !important;
       background-color: var(--dark) !important; }
       /* Selected image. */
