right: fix missing styles in message info section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -768,11 +768,16 @@
             padding: 0 15px;
             width: auto;
         }
-        /// Message info.
+        /// Message info -> Image.
         ._2rGVQ {
             border-bottom: 1px solid bd;
             c: 0 0 t;
         }
+        /// Message info -> Read by.
+        ._2AJf5 {
+            c: 0 0 t;
+            span { c: ac }
+         }
         /// Read/Delivered section.
         ._2WP9Q { border: none }
         /// Search -> Items.
