chat: fix header/footer for stickers

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -917,9 +917,12 @@
             /// Reset image context menu.
             &._26GKj ._2Nkc4:not(#z) { background: none i  }
             /// Stickers.
-            &.a81-s {
+            .a81-s {
                 /// Header.
-                ._3Mf7Z { c: 0 0 left }
+                ._3Mf7Z {
+                    c: 0 0 left;
+                    box-shadow: 0 1px sh i;
+                }
                 /// Date.
                 ._3qAvH {
                     c: cm 0 hl;
