chat: tweak context menu for images/forwarded msgs

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -934,6 +934,10 @@
                     ._2Hp95._1X6iJ ._3Mf7Z { rad: 7.5px }
                 }
             }
+            /// Context menu -> Images and forwarded messages.
+            > div > span:nth-last-child(2) > div[style] {
+                background: linear-gradient(30deg, t 65%, bg 120%) i;
+            }
             /// Audio messages.
             ._1lxsr, ._3MYI2 { c: cm }
             /// Avatars.
@@ -968,8 +972,6 @@
                 }
                 /// Stickers.
                 &._2PpWQ > div[style *= 'opacity'] { c: 0 0 left }
-            }
-                background: linear-gradient(90deg, t, left) i;
             }
             /// Replies.
             ._2HTIU { c: 0 0 right }
