chat: add background to image's timestamp

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -948,6 +948,12 @@
             }
             /// Search -> Selected message.
             > .velocity-animating * { c: ac }
+            /// Images.
+            div[style *= 'width'][style *= 'height'] + div[class] {
+                padding: 3px 7px;
+                rad: 7.5px;
+                c: 0 0 hl;
+            }
         }
         /// Left.
         &-in {
