--- a/wa.user.styl
+++ b/wa.user.styl
@@ -271,6 +271,9 @@
         ._1Zo-R { c: 0 bd hl }
         ._15wNI { c: 0 ac ac }
 
+        /// Global -> Active buttons.
+        ._3j8Pd { &.GPmgF, &.GPmgf { c: 0 0 hl }}
+
         /// Contacts -> Loader.
         svg[width = '18'][height = '18'] circle { stroke: green }
 
