global: add class selector for typing indicator

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -268,8 +268,8 @@
             }
         }
 
-        /// Global -> Typing alert.
-        span[title *= 'typing']:not(#z) { c: ac }
+        /// Global -> Typing indicator.
+        span[title *= 'typing'], ._315-i { &:not(#z) { c: ac }}
 
         /// Global -> Checkboxes.
         ._1Zo-R { c: 0 bd hl }
