meta: code cosmetics for custom color options

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -40,22 +40,22 @@
 @var checkbox chat_left  'Chat: Align left msg  ' 0
 @var checkbox chat_right 'Chat: Align right msg ' 0
 
-@var color dark    'Color: Primary bg   ' #292929
-@var color darken  'Color: Highlight bg ' #333333
-@var color darker  'Color: Secondary bg ' #424242
-@var color light   'Color: Primary fg   ' #e6e6e6
-@var color lighter 'Color: Secondary fg ' #bababa
-@var color accent  'Color: Accent       ' #7289da
-@var color yellow  'Color: Yellow       ' #f0c674
-@var color orange  'Color: Orange       ' #d98245
-@var color red     'Color: Red          ' #a54242
-@var color magenta 'Color: Magenta      ' #b294bb
-@var color violet  'Color: Violet       ' #85678f
-@var color blue    'Color: Blue         ' #54738c
-@var color cyan    'Color: Cyan         ' #5e8d87
-@var color green   'Color: Green        ' #7b823a
-@var color white   'Color: White        ' #ffffff
-@var color shadow  'Color: Shadow       ' #00000010
+@var color dark    'Color: Primary background   ' #292929
+@var color darken  'Color: Highlight background ' #333333
+@var color darker  'Color: Secondary background ' #424242
+@var color light   'Color: Primary foreground   ' #e6e6e6
+@var color lighter 'Color: Secondary foreground ' #bababa
+@var color accent  'Color: Accent               ' #7289da
+@var color yellow  'Color: Yellow               ' #f0c674
+@var color orange  'Color: Orange               ' #d98245
+@var color red     'Color: Red                  ' #a54242
+@var color magenta 'Color: Magenta              ' #b294bb
+@var color violet  'Color: Violet               ' #85678f
+@var color blue    'Color: Blue                 ' #54738c
+@var color cyan    'Color: Cyan                 ' #5e8d87
+@var color green   'Color: Green                ' #7b823a
+@var color white   'Color: White                ' #ffffff
+@var color shadow  'Color: Shadow               ' #00000010
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
