chat: fix for messages that have overriden tails

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -951,8 +951,8 @@
             /// Feat -> Message tails.
             if ( chat_msg_t == 1 ) {
                 .tail {
-                    > div { rad: 7.5px !important; }
-                    > .tail-container { display: none }
+                    > div { rad: 7.5px i }
+                    .tail-container { display: none }
                 }
             }
             /// Date.
