chat: fix alert from groups you're not a part of

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1133,5 +1133,7 @@
                 }
             }
         }
+        ///  Alerts -> Not a group participant.
+        ._26pkE { c: cm }
     }
 }
