right: fix the selected media/links/docs header

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -806,7 +806,13 @@
         /// Search -> Msg content/date.
         span[title] > span[dir] { c: fg }
         ._0LqQ { c: cm }
-        /// Media/Links/Docs.
+        /// Media/Links/Docs -> Selected header.
+        .yrOIH {
+            c: 0 0 bg;
+            box-shadow: 0 1px bd;
+            span { c: fg }
+        }
+        /// Media/Links/Docs -> Content.
         [data-active-tab] {
             border-bottom: 1px solid bd;
             c: 0 0 t;
