right: fix text color for broadcast info header

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -696,6 +696,8 @@
                 .kyJvR {
                     height: 58px;
                     c: fg;
+                    /// Broadcast list info.
+                    ._6xQdq { c: fg }
                 }
             }
             /// Highlighted sections.
