chore: update text for old/custom colors toggle

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -9,7 +9,7 @@
 @license      MIT
 @preprocessor stylus
 
-@var checkbox theme      'Old/new[custom] colors' 0
+@var checkbox theme      'Old/custom colorscheme' 0
 @var text     ui_font    'App: Custom UI font   ' ''font_name''
 @var text     radius     'App: Custom border rad' 4px
 @var checkbox fullscreen 'App: Enable fullscreen' 0
