chat: fix styles for reply section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -547,6 +547,7 @@
             &:last-child { fill: ac }
         }
         /// Message status.
+        &[data-icon *= '-check'] path { v: cm }
         &[data-icon *= '-dblcheck'] path { v: cm }
         &[data-icon *= '-dblcheck-ack'] path { v: blue }
         /// Report contact.
@@ -1160,5 +1161,26 @@
         }
         ///  Alerts -> Not a group participant.
         ._26pkE { c: cm }
+        /// Reply.
+        ._1ebw2 {
+            c: 0 0 bg;
+            box-shadow: bsh, inset 0 1px bd i;
+            /// Content.
+            > div:first-child {
+                margin: 0 0 5px 10px !important;
+                c: 0 0 t;
+                > div { c: 0 0 hl }
+            }
+            /// Close button.
+            div:last-child {
+                position: relative;
+                margin: 0 8px 5px 8px !important;
+                c: 0 0 t;
+                svg {
+                    padding: 18px;
+                    border-radius: 6px;
+                }
+            }
+        }
     }
 }
