chat: fix conflicts with blur img/videos option

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -917,7 +917,7 @@
         }
         /// Feat -> Blur img/videos.
         if ( chat_b_img == 1 ) {
-            [style *= 'height'] {
+            [class *= 'message-'] [style *= 'height'] {
                 > img, > div[style], video {
                     transition: 500ms ease;
                     transition-delay: 0ms;
