modals: tweak colors and fix media selection area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -376,7 +376,7 @@
         &::before {
             content: '';
             z-index: -1;
-            opacity: 0.96;
+            opacity: 0.81;
             position: absolute;
             top: 0; right: 0; bottom: 0; left: 0;
             c: 0 0 bg;
@@ -397,7 +397,7 @@
         }
         /// Text.
         .X5OiD { c: 0 0 bd }
-        .JmH7x { c: cm }
+        ._3qb2N, .JmH7x { c: cm }
         ._2yVvV { c: fg }
         /// Buttons.
         [role = 'button'] {
@@ -492,7 +492,7 @@
     }
 
     // Global -> Media selection.
-    ._2AP3i {
+    ._2n0jo {
         c: 0 bd bg;
         /// Item reset.
         ._1LdNS {
