icons: add one-tick message status icon

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -550,6 +550,7 @@
         &[data-icon *= '-check'] path { v: cm }
         &[data-icon *= '-dblcheck'] path { v: cm }
         &[data-icon *= '-dblcheck-ack'] path { v: blue }
+        &[data-icon *= 'check'] path { fill-opacity: 1 i }
         /// Report contact.
         &[data-icon = 'thumbs-down'] {
             path { v: orange }
