global: fix emoji menu popout

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -340,6 +340,7 @@
     }
 
     /// Global -> Emoji picker popout.
+    // ._342qq._1mTBR {
     ._342qq {
         rad: r !important;
         box-shadow: bsh;
