--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1219,5 +1219,16 @@
                 }
             }
         }
+        /// Mention popout.
+        ._2j-wI {
+            c: 0 bd bg;
+            box-shadow: 0 -1px bd i;
+            &::before { content: none }
+            .XSeqj {
+                c: fg bd bg;
+                &._1Yz8K, &:hover { c: 0 0 hl }
+            }
+            ._3SW-z { c: cm }
+        }
     }
 }
