chat: tweak colors for 'select msg' mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -881,12 +881,12 @@
             c: 0 bd;
             /// Chat -> Select messages.
             &._2AqZl {
-                c: 0 0 hl;
+                c: 0 0 t;
                 /// Selected messages.
                 .qTFAl {
                     &:hover, &._3Z2tD {
                         opacity: 0.5 !important;
-                        c: 0 0 bd;
+                        c: 0 0 hl;
                     }
                 }
                 /// Checkboxes.
